--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top">
   <a class="navbar-brand" href="#">TyroMusic</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -83,9 +83,9 @@
       </div>
     </div>
 
-    <div class="card bg-dark music">
+    <div class="card music">
       <div class="row">
-        <div>
+        <div class="iframe">
           <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/851372620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
         <div class="card-body">
@@ -98,6 +98,16 @@
   </section>
 </main>
 
+
+<section id="footer">
+<footer>
+  <div class="container text-white d-flex align-items-center justify-content-between">
+    <a id="logo1" href="#"><img src="http://tyrolium.fr/Contenu/Image/Tyrolium%20Music%20Site.png" alt="logo-tyrolium-serv"></a>
+    <span>2010-2021 © <a href="http://tyrolium.fr/">TYROLIUM</a><br>Site Create by Maxime Tournier<br>Music Create by Norman Jorge De Freitas</span>
+    <button onclick="window.location.href = '#comment';" type="button" class="btn btn-primary">None</button>
+  </div>
+</footer>
+</section>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
