--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </div>
   </section>
   <section id="music">
-    <div class="card bg-dark music">
+    <div class="card music">
       <div class="row">
-        <div>
+        <div class="iframe">
           <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/851372620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
         <div class="card-body">
@@ -70,9 +70,9 @@
       </div>
     </div>
 
-    <div class="card bg-dark music">
+    <div class="card music">
       <div class="row">
-        <div>
+        <div class="iframe">
           <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/851372620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
         <div class="card-body">
