--- a/index.html
+++ b/index.html
@@ -13,29 +13,16 @@
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg fixed-top">
-  <a class="navbar-brand" href="#">TyroMusic</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-  <nav class="navbar navbar-dark bg-dark">
+  <nav id="fixed" class="navbar navbar-expand-lg fixed-top">
     <a class="navbar-brand" href="#">
-      <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-      Bootstrap
+      <img src="https://tyrolium.fr/Contenu/Image/Tyrolium%20Music%20Site.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      TyroMusic
+    </a>
+  </nav>
+  <nav id="notfixed" class="navbar">
+    <a class="navbar-brand" href="#">
+      <img src="https://tyrolium.fr/Contenu/Image/Tyrolium%20Music%20Site.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      TyroMusic
     </a>
   </nav>
 </header>
@@ -52,11 +39,11 @@
     </div>
   </section>
   <section id="title">
-    <div>
-    <h4>Nos Music : </h4>
+    <div class="container">
+      <h2>Nos Réseaux sociaux</h2>
     </div>
   </section>
-  <section id="music">
+  <section id="music" class="container">
     <div class="card music">
       <div class="row">
         <div class="iframe">
@@ -76,7 +63,7 @@
           <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/851372620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
+          <h5 class="card-title">Special title treatment <span class="badge bg-secondary">New</span></h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
@@ -95,6 +82,32 @@
         </div>
       </div>
     </div>
+  </section>
+<hr class="container" style="background-color: #808080">
+  <section id="nosreseau" class="container">
+    <h2>Nos Réseaux sociaux</h2>
+    <ul>
+      <li class="col align-self-center">
+        <img class="imgRe" src="assets/instagram.png" alt="instagram">
+        <h3>Instagram</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi expedita possimus veniam?</p>
+        <a target="_blank" href="https://www.instagram.com/tyroliumserver/">Nous Follow</a>
+      </li>
+      <li id="discord" class="col align-self-center">
+        <img class="imgRe" src="assets/discord.png" alt="soundcloud">
+        <h3>SoundCloud</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt facilis</p>
+        <a target="_blank" href="https://discord.gg/km8h5jHezt">Nous Follow</a>
+      </li>
+      <li class="col align-self-center">
+        <img class="imgRe" src="assets/twitter.png" alt="discord">
+        <h3>Discord</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eaque nulla praesentium</p>
+        <a target="_blank" href="https://twitter.com/tyrolium">Rejoindre</a>
+      </li>
+    </ul>
+
+
   </section>
 </main>
 
