--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inria+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
   <nav id="fixed" class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand title" href="#">
       <img src="https://tyrolium.fr/Contenu/Image/Tyrolium%20Music%20Site.png" width="30" height="30" class="d-inline-block align-top" alt="">
       TyroMusic
     </a>
   </nav>
   <nav id="notfixed" class="navbar">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand title" href="#">
       <img src="https://tyrolium.fr/Contenu/Image/Tyrolium%20Music%20Site.png" width="30" height="30" class="d-inline-block align-top" alt="">
       TyroMusic
     </a>
@@ -30,9 +31,9 @@
   <section id="home">
     <div class="container">
       <article>
-        <h2>TYROLIUM MUSIC</h2>
+        <h2 class="title">ARTOMIX</h2>
         <br>
-        <h3>[Phrase d'accorche/slogan]Lorem ipsum dolor sit amet, consectetur adipisicing elit..</h3>
+        <h4>[Phrase d'accorche/slogan]Lorem ipsum dolor sit amet, consectetur adipisicing elit..</h4>
         <br>
         <p>[Presentation txt]Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur deserunt<br> incidunt inventore quos repudiandae! Ad alias culpa explicabo labore nemo nulla, quae.</p>
       </article>
@@ -40,7 +41,7 @@
   </section>
   <section id="title">
     <div class="container">
-      <h2>Nos Réseaux sociaux</h2>
+      <h2 class="title">Nos Musiques</h2>
     </div>
   </section>
   <section id="music" class="container">
@@ -82,26 +83,52 @@
         </div>
       </div>
     </div>
+
+    <div class="card music">
+      <div class="row">
+        <div class="iframe">
+          <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/851372620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card music">
+      <div class="row">
+        <div class="iframe">
+          <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/851372620&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
   </section>
 <hr class="container" style="background-color: #808080">
   <section id="nosreseau" class="container">
-    <h2>Nos Réseaux sociaux</h2>
+    <h2 class="title">Nos Réseaux sociaux</h2>
     <ul>
       <li class="col align-self-center">
         <img class="imgRe" src="assets/instagram.png" alt="instagram">
-        <h3>Instagram</h3>
+        <h3 class="title">Instagram</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi expedita possimus veniam?</p>
         <a target="_blank" href="https://www.instagram.com/tyroliumserver/">Nous Follow</a>
       </li>
       <li id="discord" class="col align-self-center">
         <img class="imgRe" src="assets/discord.png" alt="soundcloud">
-        <h3>SoundCloud</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt facilis</p>
+        <h3 class="title">SoundCloud</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt facilis zaeazeaz zaaaaaaa</p>
         <a target="_blank" href="https://discord.gg/km8h5jHezt">Nous Follow</a>
       </li>
       <li class="col align-self-center">
         <img class="imgRe" src="assets/twitter.png" alt="discord">
-        <h3>Discord</h3>
+        <h3 class="title">Discord</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eaque nulla praesentium</p>
         <a target="_blank" href="https://twitter.com/tyrolium">Rejoindre</a>
       </li>
@@ -116,7 +143,7 @@
 <footer>
   <div class="container text-white d-flex align-items-center justify-content-between">
     <a id="logo1" href="#"><img src="http://tyrolium.fr/Contenu/Image/Tyrolium%20Music%20Site.png" alt="logo-tyrolium-serv"></a>
-    <span>2010-2021 © <a href="http://tyrolium.fr/">TYROLIUM</a><br>Site Create by Maxime Tournier<br>Music Create by Norman Jorge De Freitas</span>
+    <span>2020-2021 © <a href="http://tyrolium.fr/">TYROLIUM</a><br>Entreprise Create by Maxime Tournier<br>Music Create by Norman Jorge De Freitas</span>
     <button onclick="window.location.href = '#comment';" type="button" class="btn btn-primary">None</button>
   </div>
 </footer>
